--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Demo Scroll Technique</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="flilter-content">
+            <p>Earth Invasion Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nulla consequatur temporibus earum, inventore voluptatem quisquam magnam accusamus itaque praesentium repellat. Sequi tenetur modi assumenda ipsa maxime, porro sunt aspernatur?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora obcaecati aut eius voluptatem alias tempore doloremque quod id cum architecto eum, corporis provident incidunt soluta aliquid deleniti? Sint, voluptatibus iusto?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos cumque quae error nemo eveniet natus possimus aut? Cum molestias architecto soluta porro nesciunt similique error iusto, accusantium commodi voluptatum. Nobis?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat sit perspiciatis consequatur labore facilis nemo incidunt, molestiae tenetur quisquam officiis nobis aliquam autem nam saepe? Quas cumque quibusdam illo!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit tenetur temporibus minima commodi itaque perferendis quidem distinctio ut quas laudantium tempore aspernatur deserunt, eligendi non asperiores quo voluptatem fugiat. Ad?</p>
+        </div>
+    </header>
 </body>
 </html>
