--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <section>
+        <h2>Prime Recommended Movies</h2>
+        <div class="horiz-content">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="parallax-image">
+            <h3>Featured Movie</h3>
+        </div>
         <div class="flilter-content">
             <p>Earth Invasion Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nulla consequatur temporibus earum, inventore voluptatem quisquam magnam accusamus itaque praesentium repellat. Sequi tenetur modi assumenda ipsa maxime, porro sunt aspernatur?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora obcaecati aut eius voluptatem alias tempore doloremque quod id cum architecto eum, corporis provident incidunt soluta aliquid deleniti? Sint, voluptatibus iusto?</p>
@@ -17,6 +34,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab fugiat sit perspiciatis consequatur labore facilis nemo incidunt, molestiae tenetur quisquam officiis nobis aliquam autem nam saepe? Quas cumque quibusdam illo!</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit tenetur temporibus minima commodi itaque perferendis quidem distinctio ut quas laudantium tempore aspernatur deserunt, eligendi non asperiores quo voluptatem fugiat. Ad?</p>
         </div>
-    </header>
+    </section>
+    
 </body>
 </html>
